--- a/report/tesis.tex
+++ b/report/tesis.tex
@@ -239,9 +239,10 @@ problemas traducidos. Los resultados fueron satisfactorios para problemas de
 tamaño moderado: el planificador logró resolver la mayoría de ellos en menos de
 cinco minutos.
 
-Parte de este trabajo fue presentado en la Conferencia Internacional de Planificación
-(ICAPS) en el año 2011, y los investigadores del área han
-reconocido que los dominios generados por la herramienta pueden ser de interés
+Parte de este trabajo fue presentado en la \textit{21st International
+Conference on Automated Planning and Scheduling} (ICAPS 2011), y
+los investigadores del área han reconocido que los dominios generados por la 
+herramienta son de interés
 práctico, pues se conocen sus propiedades formales y es posible estudiarlos a
 fondo para descubrir mejores heurísticas y optimizaciones para los
 planificadores.
